text fix and margin test, undo the padding test

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<div class="school">
 			<h2>Education</h2>
-			<h3>The College of St. Scholastica</h3>
+			<h3>The College of St. Scholastica - Duluth, MN</h3>
 			<h3>Graduated May 2015</h3>
 			<p>Bachelors of Science in Psychology</p>
 			<p>with Music Minor</p>
