undo header backgrounds, fixed award description

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 			<div class="awards">
 				<h3>Award for Excellence in the Music Dept.</h3>
 				<h3>St. Scholastica: May 2015</h3>
-				<p>Awarded a certificate of excellence in the music dept. at the St.Scholastica seniors ceremony for dedication to the St.Scholastica Steel Band Ensemble and service to the music dept and school ensembles as a whole</p>
+				<p>Awarded a certificate of excellence in the music dept. at the St.Scholastica seniors ceremony for dedication</p>
+				<p>to the St.Scholastica Steel Band Ensemble and service to the music dept and school ensembles as a whole</p>
 			</div>
 		</div>
 
