removed broken list style, added mcnair list attempt

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 			<div class="mcnair">
 				<h3>McNair Scholar - TRIO Program</h3>
 				<h4>St.Scholastica/UMD: September 2014 - May 2015</h4>
-				<p>Attended weekly seminars and workshops on numerous professional topics</p>
-				<p>Headed a paid summer internship, working with professionals at St. Scholastica</p>
-				<p><a href="http://mcnairscholars.com/about/">Learn about the McNair program</a></p>
+				<ol class="mcnair-list">
+					<li>Attended weekly seminars and workshops on numerous professional topics</li>
+					<li>Headed a paid summer internship, working with professionals at St. Scholastica</li>
+					<li><a href="http://mcnairscholars.com/about/">Click here to learn about the McNair program</a></li>
+				</ol>
 			</div>
 			<div class="honors">
 				<h3>Dean's List</h3>
