--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 			<h2>Education</h2>
 			<h3>The College of St. Scholastica - Duluth, MN</h3>
 			<h3>Graduated May 2015</h3>
-			<p>Bachelors of Science in Psychology</p>
-			<p>with Music Minor</p>
-			<p>Cumulative GPA 3.90</p>
+			<ol class="school-list">
+				<li>Bachelors of Science in Psychology</li>
+				<li>with Music Minor</li>
+				<li>Cumulative GPA 3.90</li>
+			</ol>	
 		</div>
 
 		<div class="awards-etc">
@@ -36,14 +38,18 @@
 			</div>
 			<div class="honors">
 				<h3>Dean's List</h3>
-				<p>Included on the Dean's List Every semester while attending St.Scholastica</p>
-				<p>8 semesters between September 2011 - May 2015</p>
+				<ol class="deans-list-list">
+					<li>Included on the Dean's List Every semester while attending St.Scholastica</li>
+					<li>8 semesters between September 2011 - May 2015</li>
+				</ol>
 			</div>
 			<div class="awards">
 				<h3>Award for Excellence in the Music Dept.</h3>
 				<h4>St. Scholastica: May 2015</h4>
-				<p>Awarded a certificate of excellence in the music dept. at the St.Scholastica seniors ceremony for dedication</p>
-				<p>to the St.Scholastica Steel Band Ensemble and service to the music dept and school ensembles as a whole</p>
+				<ol class="awards-list">
+					<li>Awarded a certificate of excellence in the music dept. at the St.Scholastica seniors ceremony for dedication
+					to the St.Scholastica Steel Band Ensemble and service to the music dept and school ensembles as a whole</li>
+				</ol>
 			</div>
 		</div>
 
@@ -52,24 +58,30 @@
 			<div class="music-librarian">
 				<h3>Music Librarian and Usher</h3>
 				<h4>St. Scholastica: September 2013 - May 2015</h4>
-				<p>Cataloged and organized incoming sheet music, instruments, and CDs</p>
-				<p>Updated pre-1990 sheet music to current catalog system</p>
-				<p>Opened the library in the mornings and closed it down at night</p>
-				<p>Sold tickets, arranged welcome area, and served food and beverages at music dept. concerts and events</p>
+				<ol class="music-librarian-list">
+					<li>Cataloged and organized incoming sheet music, instruments, and CDs</li>
+					<li>Updated pre-1990 sheet music to current catalog system</li>
+					<li>Opened the library in the mornings and closed it down at night</li>
+					<li>Sold tickets, arranged welcome area, and served food and beverages at music dept. concerts and events</li>
+				</ol>
 			</div>
 			<div class="server">
 				<h3>Server and Dishwasher</h3>
 				<h4>St. Andrew's Village - Mahtomedi: September 2010 - September 2012</h4>
-				<p>Served and bussed dishes for the "memory care" unit</p>
-				<p>Maintained a steady flow of clean dishware to the chefs and servers, while cleaning back areas of the kitchen</p>
-				<p>Helped the head chef clean and close the kitchen nightly</p>
+				<ol class="server-list">
+					<li>Served and bussed dishes for the "memory care" unit</li>
+					<li>Maintained a steady flow of clean dishware to the chefs and servers, while cleaning back areas of the kitchen</li>
+					<li>Helped the head chef clean and close the kitchen nightly</li>
+				</ol>
 			</div>
 			<div class="Summer-worker-position">
 				<h3>Summer Worker Position</h3>
 				<h4>Innovent Air Handling and Equipment: Summer 2013</h4>
-				<p>Prepared a variety of panelling units for insulation</p>
-				<p>Balanced the flow of "ASAP jobs" and "standard jobs" to make sure everything made it through my section before the next workers needed it</p>
-				<p>Cleaned my area and helped surrounding sections clean up nightly</p>
+				<ol class="summer-list">
+					<li>Prepared a variety of panelling units for insulation</li>
+					<li>Balanced the flow of "ASAP Jobs" and "Standard Jobs" to make sure everything made it through my section before the next workers needed it</li>
+					<li>Cleaned my area and helped surrounding sections clean up nightly</li>
+				</ol>
 			</div>
 		</div>
 	</body>	
