added imge named header

--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
 	</head>
 
 	<body>
-		<div class="info">
+		<header>
 			<h1>Zach Kusz</h1>
 			<p>303 Croixview Dr. S.</p>
 			<p>Afton, MN 55001</p>
 			<p>(651)-235-7365</p>
 			<p>zskusz@gmail.com</p>
-		</div>
-
+		</header>
+		<figure>
+			<figcaption>
+				<p>A lego stormtrooper learning to program.</p>
+			</figcaption>
+		</figure>
 		<div class="school">
 			<h2>Education</h2>
 			<h3>The College of St. Scholastica - Duluth, MN</h3>
