--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		</header>
 		
 		<figure>
+			<img src="http://imgfave-chat-herokuapp-com.global.ssl.fastly.net/image_cache/1307217989769774.jpg" />
 			<figcaption>
 				<p>A lego stormtrooper learning to program.</p>
 			</figcaption>
