awards to section, removed image crap, added meta charset

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 	<head>
+	<meta charset="UTF-8">
 		<link rel="stylesheet" href="stylesheet.css">
 	</head>
 
@@ -14,12 +15,6 @@
 			<p>zskusz@gmail.com</p>
 		</header>
 		
-		<figure>
-			<img src="http://imgfave-chat-herokuapp-com.global.ssl.fastly.net/image_cache/1307217989769774.jpg" />
-			<figcaption>
-				<p>A lego stormtrooper learning to program.</p>
-			</figcaption>
-		</figure>
 		<div class="school">
 			<h2>Education</h2>
 			<h3>The College of St. Scholastica - Duluth, MN</h3>
@@ -31,7 +26,7 @@
 			</ol>	
 		</div>
 
-		<div class="awards-etc">
+		<section>
 			<h2>Awards, Scholarships, and Honors</h2>
 			<div class="mcnair">
 				<h3>McNair Scholar - TRIO Program</h3>
@@ -57,7 +52,7 @@
 					to the St.Scholastica Steel Band Ensemble and service to the music dept and school ensembles as a whole</li>
 				</ol>
 			</div>
-		</div>
+		</section>
 
 		<div class="work-experience">
 		<h2>Work Experience</h2>
