changed div classes to sections

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</div>
 		</section>
 
-		<div class="work-experience">
+		<section>
 		<h2>Work Experience</h2>
 			<div class="music-librarian">
 				<h3>Music Librarian and Usher</h3>
@@ -84,6 +84,6 @@
 					<li>Cleaned my area and helped surrounding sections clean up nightly</li>
 				</ol>
 			</div>
-		</div>
+		</section>
 	</body>	
 </html>
