--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<p>zskusz@gmail.com</p>
 		</header>
 		
-		<div class="school">
+		<article>
 			<h2>Education</h2>
 			<h3>The College of St. Scholastica - Duluth, MN</h3>
 			<h3>Graduated May 2015</h3>
@@ -24,11 +24,11 @@
 				<li>with Music Minor</li>
 				<li>Cumulative GPA 3.90</li>
 			</ol>	
-		</div>
+		</article>
 
 		<section>
 			<h2>Awards, Scholarships, and Honors</h2>
-			<div class="mcnair">
+			<article>
 				<h3>McNair Scholar - TRIO Program</h3>
 				<h4>St.Scholastica/UMD: September 2014 - May 2015</h4>
 				<ol class="mcnair-list">
@@ -36,27 +36,27 @@
 					<li>Headed a paid summer internship, working with professionals at St. Scholastica</li>
 					<li><a href="http://mcnairscholars.com/about/">Click here to learn about the McNair program</a></li>
 				</ol>
-			</div>
-			<div class="honors">
+			</article>
+			<article>
 				<h3>Dean's List</h3>
 				<ol class="deans-list-list">
 					<li>Included on the Dean's List Every semester while attending St.Scholastica</li>
 					<li>8 semesters between September 2011 - May 2015</li>
 				</ol>
-			</div>
-			<div class="awards">
+			</article>
+			<article>
 				<h3>Award for Excellence in the Music Dept.</h3>
 				<h4>St. Scholastica: May 2015</h4>
 				<ol class="awards-list">
 					<li>Awarded a certificate of excellence in the music dept. at the St.Scholastica seniors ceremony for dedication
 					to the St.Scholastica Steel Band Ensemble and service to the music dept and school ensembles as a whole</li>
 				</ol>
-			</div>
+			</article>
 		</section>
 
 		<section>
 		<h2>Work Experience</h2>
-			<div class="music-librarian">
+			<article>
 				<h3>Music Librarian and Usher</h3>
 				<h4>St. Scholastica: September 2013 - May 2015</h4>
 				<ol class="music-librarian-list">
@@ -65,8 +65,8 @@
 					<li>Opened the library in the mornings and closed it down at night</li>
 					<li>Sold tickets, arranged welcome area, and served food and beverages at music dept. concerts and events</li>
 				</ol>
-			</div>
-			<div class="server">
+			</article>
+			<article>
 				<h3>Server and Dishwasher</h3>
 				<h4>St. Andrew's Village - Mahtomedi: September 2010 - September 2012</h4>
 				<ol class="server-list">
@@ -74,8 +74,8 @@
 					<li>Maintained a steady flow of clean dishware to the chefs and servers, while cleaning back areas of the kitchen</li>
 					<li>Helped the head chef clean and close the kitchen nightly</li>
 				</ol>
-			</div>
-			<div class="Summer-worker-position">
+			</article>
+			<article>
 				<h3>Summer Worker Position</h3>
 				<h4>Innovent Air Handling and Equipment: Summer 2013</h4>
 				<ol class="summer-list">
@@ -83,7 +83,7 @@
 					<li>Balanced the flow of "ASAP Jobs" and "Standard Jobs" to make sure everything made it through my section before the next workers needed it</li>
 					<li>Cleaned my area and helped surrounding sections clean up nightly</li>
 				</ol>
-			</div>
+			</article>
 		</section>
 	</body>	
 </html>
