made education a section, centered head text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<p>zskusz@gmail.com</p>
 		</header>
 		
-		<article>
+		<section>
 			<h2>Education</h2>
 			<h3>The College of St. Scholastica - Duluth, MN</h3>
 			<h3>Graduated May 2015</h3>
@@ -24,11 +24,11 @@
 				<li>with Music Minor</li>
 				<li>Cumulative GPA 3.90</li>
 			</ol>	
-		</article>
+		</section>
 
 		<section>
-			<h2>Awards, Scholarships, and Honors</h2>
 			<article>
+				<h2>Awards, Scholarships, and Honors</h2>
 				<h3>McNair Scholar - TRIO Program</h3>
 				<h4>St.Scholastica/UMD: September 2014 - May 2015</h4>
 				<ol class="mcnair-list">
@@ -55,8 +55,8 @@
 		</section>
 
 		<section>
-		<h2>Work Experience</h2>
 			<article>
+				<h2>Work Experience</h2>
 				<h3>Music Librarian and Usher</h3>
 				<h4>St. Scholastica: September 2013 - May 2015</h4>
 				<ol class="music-librarian-list">
