experiment with pic

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 			<p>zskusz@gmail.com</p>
 		</header>
 		
+		<figure>
+			<figcaption>
+				<p>A stormtrooper learning to code</p>
+			</figcaption>
+		</figure>
+		
 		<section>
 			<h2>Education</h2>
 			<h3>The College of St. Scholastica - Duluth, MN</h3>
